resolved about, envi, pyromaniac, remove 3 unused pages

--- a/about.html
+++ b/about.html
@@ -100,7 +100,7 @@ padding-bottom: px;
              class="js-lazy e2e-site-project-module-image"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              data-src="images/2892ad7e-c94a-4109-8038-565dae3a55eb_rw_12007fa7.png?h=ce0f9cccd4eca8c4862f7fbfb74a3298"
-             data-srcset="https://cdn.myportfolio.com/52678a85-7f0d-416a-9fa7-e03a213673e5/2892ad7e-c94a-4109-8038-565dae3a55eb_rw_600.png?h=d96231e8141a1352256e19a8aaa323ae 600w,https://cdn.myportfolio.com/52678a85-7f0d-416a-9fa7-e03a213673e5/2892ad7e-c94a-4109-8038-565dae3a55eb_rw_1200.png?h=ce0f9cccd4eca8c4862f7fbfb74a3298 732w,"
+             data-srcset="images/2892ad7e-c94a-4109-8038-565dae3a55eb_rw_12007fa7.png?h=ce0f9cccd4eca8c4862f7fbfb74a3298"
              data-sizes="(max-width: 732px) 100vw, 732px"
              width="732"
              height="0"
