--- a/envi.html
+++ b/envi.html
@@ -122,30 +122,36 @@ padding-bottom: px;
     <div class="grid__item-container js-grid-item-container" data-flex-grow="462.22222222222" style="width:462.22222222222px; flex-grow:462.22222222222;" data-width="1920" data-height="1080">
       <script type="text/html" class="js-lightbox-slide-content">
         <div class="grid__image-wrapper">
-          <img src="https://cdn.myportfolio.com/52678a85-7f0d-416a-9fa7-e03a213673e5/9f4ca9c6-1fa9-4e01-aa8e-3e372a9397cc_rw_1920.png?h=d7e895d7b47241c58142b1a3c04a8754" srcset="https://cdn.myportfolio.com/52678a85-7f0d-416a-9fa7-e03a213673e5/9f4ca9c6-1fa9-4e01-aa8e-3e372a9397cc_rw_600.png?h=e74fa453b7c79878d4905a9551b0c8c5 600w,https://cdn.myportfolio.com/52678a85-7f0d-416a-9fa7-e03a213673e5/9f4ca9c6-1fa9-4e01-aa8e-3e372a9397cc_rw_1200.png?h=09fb5f9b18e2ea753d2c7e83075af28e 1200w,https://cdn.myportfolio.com/52678a85-7f0d-416a-9fa7-e03a213673e5/9f4ca9c6-1fa9-4e01-aa8e-3e372a9397cc_rw_1920.png?h=d7e895d7b47241c58142b1a3c04a8754 1920w,"  sizes="(max-width: 1920px) 100vw, 1920px">
+          <img 
+          src="images/concept_art.png"
+          srcset="images/concept_art.png"
+          sizes="(max-width: 1920px) 100vw, 1920px">
         <div>
       </script>
       <img
         class="grid__item-image js-grid__item-image grid__item-image-lazy js-lazy"
         src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
         
-        data-src="https://cdn.myportfolio.com/52678a85-7f0d-416a-9fa7-e03a213673e5/9f4ca9c6-1fa9-4e01-aa8e-3e372a9397cc_rw_1920.png?h=d7e895d7b47241c58142b1a3c04a8754"
-        data-srcset="https://cdn.myportfolio.com/52678a85-7f0d-416a-9fa7-e03a213673e5/9f4ca9c6-1fa9-4e01-aa8e-3e372a9397cc_rw_600.png?h=e74fa453b7c79878d4905a9551b0c8c5 600w,https://cdn.myportfolio.com/52678a85-7f0d-416a-9fa7-e03a213673e5/9f4ca9c6-1fa9-4e01-aa8e-3e372a9397cc_rw_1200.png?h=09fb5f9b18e2ea753d2c7e83075af28e 1200w,https://cdn.myportfolio.com/52678a85-7f0d-416a-9fa7-e03a213673e5/9f4ca9c6-1fa9-4e01-aa8e-3e372a9397cc_rw_1920.png?h=d7e895d7b47241c58142b1a3c04a8754 1920w,"
+          data-src="images/concept_art.png"
+          data-srcset="images/concept_art.png"
       >
       <span class="grid__item-filler" style="padding-bottom:56.25%;"></span>
     </div>
     <div class="grid__item-container js-grid-item-container" data-flex-grow="462.22222222222" style="width:462.22222222222px; flex-grow:462.22222222222;" data-width="1920" data-height="1080">
       <script type="text/html" class="js-lightbox-slide-content">
         <div class="grid__image-wrapper">
-          <img src="https://cdn.myportfolio.com/52678a85-7f0d-416a-9fa7-e03a213673e5/5b706fe0-55da-420a-bdfc-e39a30869341_rw_1920.png?h=86b66de1e0f1cb7c7d4605d5885b163f" srcset="https://cdn.myportfolio.com/52678a85-7f0d-416a-9fa7-e03a213673e5/5b706fe0-55da-420a-bdfc-e39a30869341_rw_600.png?h=e77076c163afb161860991bb8c7dbc48 600w,https://cdn.myportfolio.com/52678a85-7f0d-416a-9fa7-e03a213673e5/5b706fe0-55da-420a-bdfc-e39a30869341_rw_1200.png?h=6f3984f5754174873b720e3241635490 1200w,https://cdn.myportfolio.com/52678a85-7f0d-416a-9fa7-e03a213673e5/5b706fe0-55da-420a-bdfc-e39a30869341_rw_1920.png?h=86b66de1e0f1cb7c7d4605d5885b163f 1920w,"  sizes="(max-width: 1920px) 100vw, 1920px">
+          <img 
+          src="images/2d_assets.png"
+          srcset="images/2d_assets.png"
+          sizes="(max-width: 1920px) 100vw, 1920px">
         <div>
       </script>
       <img
         class="grid__item-image js-grid__item-image grid__item-image-lazy js-lazy"
         src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
         
-        data-src="https://cdn.myportfolio.com/52678a85-7f0d-416a-9fa7-e03a213673e5/5b706fe0-55da-420a-bdfc-e39a30869341_rw_1920.png?h=86b66de1e0f1cb7c7d4605d5885b163f"
-        data-srcset="https://cdn.myportfolio.com/52678a85-7f0d-416a-9fa7-e03a213673e5/5b706fe0-55da-420a-bdfc-e39a30869341_rw_600.png?h=e77076c163afb161860991bb8c7dbc48 600w,https://cdn.myportfolio.com/52678a85-7f0d-416a-9fa7-e03a213673e5/5b706fe0-55da-420a-bdfc-e39a30869341_rw_1200.png?h=6f3984f5754174873b720e3241635490 1200w,https://cdn.myportfolio.com/52678a85-7f0d-416a-9fa7-e03a213673e5/5b706fe0-55da-420a-bdfc-e39a30869341_rw_1920.png?h=86b66de1e0f1cb7c7d4605d5885b163f 1920w,"
+          data-src="images/2d_assets.png"
+          data-srcset="images/2d_assets.png"
       >
       <span class="grid__item-filler" style="padding-bottom:56.25%;"></span>
     </div>
